--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-  <a href="./another.html">test</a>
+<h1>Some usefull links:</h1>
+<p>
+  <a href="https://hacs.xyz">Home Assistant Comunity Store (HACS)</a>
+  </p>
 </body>
 </html>
