minor cosmetic change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Some usefull links:</h1>
+<h1>Some useful links:</h1>
 <p>
   <a href="https://hacs.xyz">Home Assistant Comunity Store (HACS)</a>
   </p>
