added dashboard example link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1>Some useful links:</h1>
 <p>
   <a href="https://hacs.xyz">Home Assistant Comunity Store (HACS)</a>
+  <a href="https://community.home-assistant.io/t/my-2020-redesigned-lovelace-setup-and-some-automations/160558">Lovelace UI - great dashboard</a>
   </p>
 </body>
 </html>
