--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <p>
   <a href="https://hacs.xyz">Home Assistant Comunity Store (HACS)</a></br>
   <a href="https://community.home-assistant.io/t/my-2020-redesigned-lovelace-setup-and-some-automations/160558">Lovelace UI - great dashboard</a>
+  <a href="https://community.home-assistant.io/t/raspberry-pi-fan/43933/35">FAN control example</a>
   </p>
 </body>
 </html>
